# Taskmanagement-KIP

./: .gitignore  README.md  pyproject.toml
backend/: unit_tests.py
backend/src/: app.py
backend/src/common/: models.py  orm_models.py  pydantic_models.py
backend/src/data/: availability_data copy.json
backend/src/database/: crud_diagnoses.py  crud_examinations.py  crud_experts.py  crud_medications.py  crud_paitent_entries.py  crud_patient_entries.py  crud_patients.py  crud_results.py  crud_symptoms.py  orm_models.py  session.py
backend/src/interfaces/: database.py
backend/src/modules/: STT_service_whisper.py  __init__.py  ai_service_gemini.py  ai_service_openai.py  crud.py  database.py  debug.py  helpers.py  logger.py  processing.py  prompts.py
data/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  patients.txt  patients2.txt
frontend/: package.json  server.js
frontend/public/css/: style.css
frontend/public/js/: audio.js  main.js  patient_store.js
frontend/src/: app.py  server.js
frontend/src/controllers/: audio.js  home.js
frontend/src/models/: history_store.js  patient_store.js  symptom_store.js  whisper_service.js
frontend/src/routes/: patients.js
frontend/src/templates/: index.html
frontend/src/views/: 404.hbs  500.hbs  coordination.hbs  index.hbs  new-patient.hbs  patient-edit.hbs  patient-input.hbs  patient-overview.hbs  patient.hbs  (+1 more)
frontend/test/: app.spec.js
frontend2/: package-lock.json  package.json  server.js
src/: api_test.py
src/backend/: api.py
src/frontend/: index.html
(+28 files in other folders)
